--- a/Meu_Site_MVC/Views/Home/Index.cshtml
+++ b/Meu_Site_MVC/Views/Home/Index.cshtml
@@ -13,7 +13,9 @@
     <div class= "text-center">
         <h4>Deus é fiel....</h4>
 
-
+        <span>
+                <img src="~/Images/circulo.JPG"/>
+            </span>
 
    
 
