--- a/Meu_Site_MVC/Views/Home/Index.cshtml
+++ b/Meu_Site_MVC/Views/Home/Index.cshtml
@@ -8,16 +8,27 @@
 <div class="text-center">
     <h1 class="display-4">Bem Vindo!</h1>
     <h2>Marta Neris</h2>
-    <p>Meu primeiro site em MVC</p>
-    <span>Seu Email é: @Model.Email</span>
+    <span> Sou do Sexo @Model.Sexo</span>
+     <span> Minha idade  @Model.Idade</span>
+    <p>Este é meu  primeiro site em MVC</p>
+    <span>Meu Email  @Model.Email</span>
     <div class= "text-center">
-        <h4>Deus é fiel....</h4>
-
+        
         <span>
                 <img src="~/Images/circulo.JPG"/>
             </span>
 
-   
+            <div class="text-center">
+            <span>
+                @Model.Telefone
+            </span>
+   </div>
+           
+            
+   <p>Todos os dias um pequeno avanço nessa longa Jornada!!</p>
+   <div class="text-center">
+       <h4>Deus é fiel....</h4>
+   </div>
 
     </div>
     
